--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a class="nav-menu menu-studio" href="./index.html">Studio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-menu" href="">Portfolio</a>
+                        <a class="nav-menu" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-menu" href="">Contacts</a>
@@ -261,7 +261,7 @@
             
         </section>
     
-        <section class="section-four">
+        <section class="section-four" id="portfolio">
             <div class="container four-div">
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
