--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="logo-type" href="./index.html">Web<span class="studio-color">Studio</span></a>
                 <ul class="nav-ul">
                     <li class="nav-item">
-                        <a class="nav-menu menu-studio" href="./index.html">Studio</a>
+                        <a class="nav-menu current" href="./index.html">Studio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-menu" href="#portfolio">Portfolio</a>
@@ -40,8 +40,6 @@
                 </svg>
             </button>
         </div>
-        
-    
     </header>
     <main>
         <section class="section-one">
